--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,14 @@ packages = [{include = "page_loader"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 
+[tool.poetry.scripts]
+page-loader = "page_loader.scripts.page_loader_script:main"
+
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
 pytest = "^7.3.1"
+requests-mock = "^1.10.0"
 
 [build-system]
 requires = ["poetry-core"]
