--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "page_loader"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.scripts]
 page-loader = "page_loader.scripts.page_loader_script:main"
