--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ page-loader = "page_loader.scripts.page_loader_script:main"
 flake8 = "^6.0.0"
 pytest = "^7.3.1"
 requests-mock = "^1.10.0"
+pytest-image-diff = "^0.0.11"
 
 [build-system]
 requires = ["poetry-core"]
