--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,8 @@ per-file-ignores =
 [tool:pytest]
 norecursedirs = __pycache__
 addopts = --strict-markers
+log_cli = true
+log_level = NOTSET
 
 [isort]
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
